# MLLabAgent

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md
src/ml_lab_agent/: main.py
src/ml_lab_agent/api/agents/chat_graph/: graph.py  nodes.py  state.py
src/ml_lab_agent/api/routes/: chat.py  experiments.py  health.py
src/ml_lab_agent/config/: config.py
src/ml_lab_agent/data/: dummy_data.py
src/ml_lab_agent/repositories/: dummy_run_repository.py  mlflow_run_repository.py
src/ml_lab_agent/schemas/: agent_schemas.py  chat_schemas.py  exp_schemas.py  llm_schemas.py
src/ml_lab_agent/services/: agent_services.py  chat_service.py  exp_services.py  llm_service.py  llm_test_service.py  request_parser_service.py  run_formatting_service.py
src/ml_lab_agent/tests/: test_service.py
src/ml_lab_agent/tests/api/: test_chat.py  test_experiments.py  test_llm_service.py
src/ml_lab_agent/tests/graph/: test_chat_graph.py  test_chat_nodes.py
src/ml_lab_agent/tests/integration/: test_request_parser_llm.py
src/ml_lab_agent/tests/services/: test_agent_services.py  test_request_parser_service.py
src/scripts/: create_demo_runs.py
